# PX4-Modifying-Lattepanda

cf_bag/src/: bag.cpp
data_log_bag/: metadata.yaml
data_logging/src/: data_logging.cpp
install/cf_bag/lib/cf_bag/: cf_bag
install/cf_bag/share/cf_bag/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: package.sh
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
install/dynamixel_workbench/share/dynamixel_workbench/: package.sh
install/dynamixel_workbench_msgs/share/dynamixel_workbench_msgs/: package.sh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: package.sh
install/keyboard_teleop_v3/lib/keyboard_teleop_v3/: keyboard_teleop_node
install/keyboard_teleop_v3/share/keyboard_teleop_v3/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motion_capture_tracking_interfaces/share/motion_capture_tracking_interfaces/: local_setup.sh  package.sh
install/quadrotor_controller/lib/quadrotor_controller/: dynamixel_fix  dynamixel_reboot
install/quadrotor_controller/share/quadrotor_controller/: local_setup.sh  package.sh
keyboard_teleop_v3/: CMakeLists.txt
keyboard_teleop_v3/src/: keyboard_teleop.cpp
log/: latest_build
px4_msgs/msg/: CenterOfMass.msg  CustomControlMode.msg  VehicleThrustNonNorm.msg  VehicleTorqueSetpoint.msg
px4_ros_com/: CMakeLists.txt  package.xml
px4_ros_com/launch/: v3_flight_launcher.launch.py
px4_ros_com/src/examples/advertisers/: debug_vect_advertiser.cpp
px4_ros_com/src/examples/listen_and_speak_ros/: custom_trajectory_generation.cpp  listen_and_speak_ros.cpp
quadrotor_controller/: CMakeLists.txt
quadrotor_controller/src/: dynamixel_fix.cpp  dynamixel_reboot.cpp
(+5 files in other folders)
